--- a/visits-counter/docker-compose.yml
+++ b/visits-counter/docker-compose.yml
@@ -8,6 +8,9 @@ services:
     ports:
       - "80:8080"
 
+# port on local: 80
+# port on node server: 8080
+
 # docker compose creates the two containers (redis, node) 
 # both have free access to each other and can exchange 
 # as much information as they need
