--- a/react-app/Dockerfile
+++ b/react-app/Dockerfile
@@ -9,3 +9,7 @@ RUN npm run build
 # run phase (automatically starts the server)
 FROM nginx
 COPY --from=builder /usr/app/build /usr/share/nginx/html
+
+# run using:
+#   docker run -p 8080:80 <image_id>
+# Nginx uses port 80 by default
