--- a/fib-calc/client-webapp/package.json
+++ b/fib-calc/client-webapp/package.json
@@ -5,7 +5,9 @@
   "dependencies": {
     "react": "^16.6.3",
     "react-dom": "^16.6.3",
-    "react-scripts": "2.1.1"
+    "react-scripts": "2.1.1",
+    "react-router-dom": "4.3.1",
+    "axios": "0.18.0"
   },
   "scripts": {
     "start": "react-scripts start",
