--- a/visits-counter/package.json
+++ b/visits-counter/package.json
@@ -1,7 +1,7 @@
 {
     "dependencies": {
         "express": "*",
-        "redis": "2.8.0"
+        "redis": ">=3.1.1"
     },
     "scripts": {
         "start": "node app.js"
