--- a/fib-calc/worker/package.json
+++ b/fib-calc/worker/package.json
@@ -1,7 +1,7 @@
 {
     "dependencies": {
         "nodemon": "1.18.3",
-        "redis": "2.8.0"
+        "redis": ">=3.1.1"
     }, 
     "scripts" : {
         "start": "node index.js",
