--- a/fib-calc/exp-server/package.json
+++ b/fib-calc/exp-server/package.json
@@ -2,7 +2,7 @@
     "dependencies": {
         "express": "4.16.3",
         "pg": "7.4.3",
-        "redis": "2.8.0",
+        "redis": ">=3.1.1",
         "cors": "2.8.4",
         "nodemon": "1.18.3",
         "body-parser": "*"
